--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
-<!DOCTYPE html html>
-<meta lang="ru">
-<head>
-</head>
-<body>
-</body>
+<html>
+ <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title>first try</title>
+ </head>
+ <body>
+  <h1>заголовок</h1>
+  <p>первый абзац</p>
+ </body>
+</html>
